# callback_benchmark

./: CMakeLists.txt  bootstrap.sh  perfstat.sh  pprof.sh  readme.md
example/gen_rand/: main.cpp
example/hello/: func.cpp  func.h  main.cpp  vfunc.cpp  vfunc.h
